kubernetes/services/jupyter/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyter
  namespace: aiml
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jupyter.capi-core.homelab.danmanners.com
spec:
  hostnames:
  - jupyter.capi-core.homelab.danmanners.com
  parentRefs:
  - kind: Gateway
    group: gateway.networking.k8s.io
    name: gwapi
    namespace: default
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: proxy-public
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: 0s
      request: 0s
